Use new spaceUsage endpoint in place of deprecated spaceStatus
